--- a/style.css
+++ b/style.css
@@ -2,3 +2,37 @@
   margin: 0;
   padding: 0;
 }
+.container {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.logo{
+   width: 150px;
+   height: 150px;
+   border-radius: 50%;
+}
+
+.contacts ul {
+  list-style-type: none;
+  margin: 15px;
+}
+
+.about-text{
+  padding: 5px 0;
+  text-indent: 1.5em;
+  font-size: 20px;
+}
+
+h1{
+  font-size: 26px;
+  padding: 10px;
+}
+h2{
+  font-size: 20px;
+  margin: 15px;
+}
+.skill ul li {
+  padding: 5px;
+  list-style-type: none;
+}
