--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  }
+
+body{
+  text-align: center;
 }
+
 .container {
   max-width: 1024px;
   margin: 0 auto;
@@ -11,6 +16,7 @@
    width: 150px;
    height: 150px;
    border-radius: 50%;
+   margin: 50px auto;
 }
 
 .contacts ul {
@@ -20,19 +26,25 @@
 
 .about-text{
   padding: 5px 0;
-  text-indent: 1.5em;
   font-size: 20px;
 }
 
 h1{
-  font-size: 26px;
-  padding: 10px;
+  font-size: 30px;
+  padding: 25px;
 }
 h2{
+  font-size: 26px;
+  margin: 25px;
+}
+p{
+  text-align: center;
   font-size: 20px;
-  margin: 15px;
 }
 .skill ul li {
   padding: 5px;
   list-style-type: none;
+}
+footer{
+margin-top: 15px;
 }
